--- a/index.html
+++ b/index.html
@@ -163,9 +163,30 @@
 				</div>
 			</div>
 		</div>
-	</div>
 </section>
 	<!-- Client's Testimony End -->
+
+	<!-- Sponsors' Portion -->
+<section class="sponsors">
+		<div class="wrapper">
+			<div class="sponsor_wrapper">
+				<div class="sponsor_logo">
+				<img src="images/envato.png" alt="Envato">
+				</div>
+				<div class="sponsor_logo">
+					<img src="images/wpress.png" alt="Wordpress">
+				</div>
+				<div class="sponsor_logo">
+					<img src="images/atts.png" alt="ae tuts">
+				</div>
+				<div class="sponsor_logo">
+					<img src="images/mlancer.png" alt="microlancer">
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+	<!-- Sponsors' Portion -->
 
 	<!-- Team Members Start -->
 <section class="team">
