--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" type="text/css" href="css/all.min.css"> -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
     <title>Escape</title>
@@ -47,7 +46,7 @@
 	<!-- Banner End -->
 
 	<!-- Service Start -->
-<section class="service_top">
+<section class="service">
 	<div class="wrapper">
 		<div class="service_top1">
 			<div class="service_text1">
@@ -62,7 +61,9 @@
 		</div>
 	</div>
 </section>
-<section class="service_center">
+
+	<!-- Service Center Part -->
+<section class="service for_bg">
 	<div class="wrapper">
 		<div class="service_top2">
 			<div class="service_image2">
@@ -79,8 +80,7 @@
 </section>
 
 	<!-- Service Bottom Part -->
-
-<section class="service_down">
+<section class="service">
 	<div class="wrapper">
 		<div class="service_bottom">
 			<div class="offerings_left">
@@ -142,7 +142,7 @@
 </section>
 	<!-- Service End -->
 
-	<!-- Client's Testimony Start -->
+	<!-- Client's Response Start -->
 <section class="testimonial">
 	<div class="wrapper">
 		<div class="testimonial_top">
@@ -172,7 +172,7 @@
 			</div>
 		</div>
 </section>
-	<!-- Client's Testimony End -->
+	<!-- Client's Response End -->
 
 	<!-- Sponsors' Portion -->
 <section class="sponsors">
