--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 	<div class="wrapper">
 		<div class="logo">
 			<a href="index.html">
-			<i class="fas fa-paper-plane"></i>
-			<h1>ESCAPE</h1>
+			<img src="images/logo.png" alt="Escape">
 			</a>
 		</div>
 		<div class="menu">
